add delete event endpoint
